Fix mobile styles, take 3

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="container">
             <h2>Get in touch</h2>
             <div class="contact-content">
-                <p>I'm currently seeking Staff or Principal level roles where I can leverage technical content<br>to improve user experience and drive product clarity at scale.</p>
+                <p>I'm currently seeking Staff or Principal level roles where I can leverage technical content to improve user experience and drive product clarity at scale.</p>
                 <div class="contact-links">
                     <a href="https://github.com/melamos" class="contact-link" target="_blank">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
