Pre-launch edits

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <header>
         <nav>
             <div class="nav-container">
-                <h1 class="logo">Melissa Amos</h1>
+                <div class="logo-placeholder"></div>
                 <ul class="nav-links">
                     <li><a href="#about">About</a></li>
-                    <li><a href="#case-studies">Case studies</a></li>
                     <li><a href="#samples">Documentation</a></li>
+                    <li><a href="#case-studies">Case studies</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -23,7 +23,7 @@
 
     <section id="hero">
         <div class="container">
-            <h2>Content design & strategy</h2>
+            <h1>Melissa Amos</h1>
             <p class="tagline">Designing content that drives product clarity at scale.</p>
             <p class="intro">15+ years crafting technical and product content that reduces complexity and support burden while streamlining development cycles. I write award-winning technical documentation, architect documentation systems, establish content standards and terminology frameworks, and build content operations from the ground up.</p>
         </div>
@@ -41,47 +41,53 @@
                     <p>My work becomes organizational infrastructure: the frameworks teams rely on, the standards that enable independent decision-making, and the governance channels that align cross-functional collaboration.</p>
 
                     <h3>Core expertise</h3>
-                    <p><strong>Terminology management:</strong> Product nomenclature and naming frameworks, controlled vocabulary development, systematic terminology analysis, upstream integration at PRD/CUJ phase, glossary and taxonomy development, cross-functional alignment on naming standards</p>
-
-                    <p><strong>Content design & UI writing:</strong> UI text and microcopy, in-product content, style guide development, empty states and error messages, tooltips and contextual help, real-time content guidance, usability testing, accessibility standards</p>
-
-                    <p><strong>Information architecture & content strategy:</strong> Solving complex IA challenges through systematic analysis, architecting content systems that scale across contexts, content reuse frameworks and repository design, content governance and workflow management, bridging DITA/XML with docs-as-code workflows, strategic content recommendations backed by competitive research and cost-benefit analysis</p>
-
-                    <p><strong>Documentation leadership:</strong> Building and scaling documentation programs, AI-assisted documentation workflows, docs-as-code implementation, Markdown/Git/GitHub, DITA/XML and structured authoring, style automation, content governance frameworks, documentation processes, cross-functional collaboration, mentorship and organizational capacity building</p>
+                    <div class="expertise-skills-grid">
+                        <div class="expertise-skill-group">
+                            <h4>Documentation leadership</h4>
+                            <ul>
+                                <li>Building and scaling documentation programs</li>
+                                <li>AI-assisted documentation workflows</li>
+                                <li>Docs-as-code, Markdown/Git/GitHub</li>
+                                <li>DITA/XML and structured authoring</li>
+                                <li>Style automation and content governance</li>
+                                <li>Mentorship and organizational capacity building</li>
+                            </ul>
+                        </div>
+                        <div class="expertise-skill-group">
+                            <h4>Information architecture & content strategy</h4>
+                            <ul>
+                                <li>Architecting content systems that scale across contexts</li>
+                                <li>Content reuse frameworks and repository design</li>
+                                <li>Solving complex IA challenges through systematic analysis</li>
+                                <li>Bridging DITA/XML with docs-as-code workflows</li>
+                                <li>Content governance and workflow management</li>
+                                <li>Strategic recommendations backed by research and cost-benefit analysis</li>
+                            </ul>
+                        </div>
+                        <div class="expertise-skill-group">
+                            <h4>Content design & UI writing</h4>
+                            <ul>
+                                <li>UI text and microcopy</li>
+                                <li>Style guide development</li>
+                                <li>Empty states and error messages</li>
+                                <li>Tooltips and contextual help</li>
+                                <li>Real-time content guidance</li>
+                                <li>Usability testing and accessibility standards</li>
+                            </ul>
+                        </div>
+                        <div class="expertise-skill-group">
+                            <h4>Terminology management</h4>
+                            <ul>
+                                <li>Product nomenclature and naming frameworks</li>
+                                <li>Controlled vocabulary development</li>
+                                <li>Systematic terminology analysis</li>
+                                <li>Upstream integration at PRD/CUJ phase</li>
+                                <li>Glossary and taxonomy development</li>
+                                <li>Cross-functional alignment on naming standards</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="case-studies">
-        <div class="container">
-            <h2>Case studies</h2>
-            <p class="section-intro">Strategic content challenges solved through systematic analysis, novel technical solutions, and cross-functional collaboration.</p>
-            
-            <div class="expertise-grid">
-                <article class="expertise-card">
-                    <h3>Terminology management</h3>
-                    <p>Effective product terminology requires balancing technical accuracy, user mental models, and cross-functional alignment. I establish systematic frameworks for product naming decisions, integrate terminology upstream in product development, and create authoritative references that prevent costly debates and ensure consistency.</p>
-                    <a href="terminology.html" class="card-link">View case studies →</a>
-                </article>
-
-                <article class="expertise-card">
-                    <h3>Content design & UI writing</h3>
-                    <p>Content design shapes how users experience and understand products through microcopy, UI patterns, and interaction flows. I establish scalable UI content standards, build real-time content design capacity across organizations, and apply content design principles to reduce cognitive load in complex workflows.</p>
-                    <a href="content-design.html" class="card-link">View case studies →</a>
-                </article>
-
-                <article class="expertise-card">
-                    <h3>Information architecture & content strategy</h3>
-                    <p>Effective information architecture transforms unstructured content into scalable systems that support version control, content reuse, and automated publishing. I architect scalable documentation systems, solve content reuse challenges, and enable consistency through comprehensive standards that reduce technical debt and allow documentation to scale with product complexity.</p>
-                    <a href="ia.html" class="card-link">View case studies →</a>
-                </article>
-
-                <article class="expertise-card">
-                    <h3>Documentation leadership</h3>
-                    <p>Documentation leadership transforms reactive content production into strategic organizational capability. I establish systematic release operations, lead strategic content initiatives through structured evaluation, and own critical documentation programs that ensure comprehensive coverage while developing team capacity.</p>
-                    <a href="docs-leadership.html" class="card-link">View case studies →</a>
-                </article>
             </div>
         </div>
     </section>
@@ -113,6 +119,39 @@
         </div>
     </section>
 
+    <section id="case-studies">
+        <div class="container">
+            <h2>Case studies</h2>
+            <p class="section-intro">Strategic content challenges solved through systematic analysis, novel technical solutions, and cross-functional collaboration.</p>
+            
+            <div class="expertise-grid">
+                <article class="expertise-card">
+                    <h3>Documentation leadership</h3>
+                    <p>Documentation leadership transforms reactive content production into strategic organizational capability. I establish systematic release operations, lead strategic content initiatives through structured evaluation, and own critical documentation programs that ensure comprehensive coverage while developing team capacity.</p>
+                    <a href="docs-leadership.html" class="card-link">View documentation leadership case studies →</a>
+                </article>
+
+                <article class="expertise-card">
+                    <h3>Information architecture & content strategy</h3>
+                    <p>Effective information architecture transforms unstructured content into scalable systems that support version control, content reuse, and automated publishing. I architect scalable documentation systems, solve content reuse challenges, and enable consistency through comprehensive standards that reduce technical debt and allow documentation to scale with product complexity.</p>
+                    <a href="ia.html" class="card-link">View information architecture case studies →</a>
+                </article>
+
+                <article class="expertise-card">
+                    <h3>Content design & UI writing</h3>
+                    <p>Content design shapes how users experience and understand products through microcopy, UI patterns, and interaction flows. I establish scalable UI content standards, build real-time content design capacity across organizations, and apply content design principles to reduce cognitive load in complex workflows.</p>
+                    <a href="content-design.html" class="card-link">View content design case studies →</a>
+                </article>
+
+                <article class="expertise-card">
+                    <h3>Terminology management</h3>
+                    <p>Effective product terminology requires balancing technical accuracy, user mental models, and cross-functional alignment. I establish systematic frameworks for product naming decisions, integrate terminology upstream in product development, and create authoritative references that prevent costly debates and ensure consistency.</p>
+                    <a href="terminology.html" class="card-link">View terminology management case studies →</a>
+                </article>
+            </div>
+        </div>
+    </section>
+
     <section id="contact">
         <div class="container">
             <h2>Get in touch</h2>
@@ -131,7 +170,7 @@
                         </svg>
                         LinkedIn
                     </a>
-                    <a href="mailto:melissa.amos@gmail.com" class="contact-link">
+                    <a href="/cdn-cgi/l/email-protection#701d151c190303115e111d1f0330171d11191c5e131f1d" class="contact-link">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M0 3v18h24v-18h-24zm6.623 7.929l-4.623 5.712v-9.458l4.623 3.746zm-4.141-5.929h19.035l-9.517 7.713-9.518-7.713zm5.694 7.188l3.824 3.099 3.83-3.104 5.612 6.817h-18.779l5.513-6.812zm9.208-1.264l4.616-3.741v9.348l-4.616-5.607z"/>
                         </svg>
@@ -145,7 +184,3 @@
     <footer>
         <div class="container">
             <p>&copy; 2026 Melissa Amos. Built with HTML, CSS, and hosted on GitHub Pages.</p>
-        </div>
-    </footer>
-</body>
-</html>
