--- a/content-design.html
+++ b/content-design.html
@@ -13,8 +13,8 @@
                 <h1 class="logo"><a href="index.html" style="color: inherit; text-decoration: none;">Melissa Amos</a></h1>
                 <ul class="nav-links">
                     <li><a href="index.html#about">About</a></li>
-                    <li><a href="index.html#case-studies">Case studies</a></li>
                     <li><a href="index.html#samples">Documentation</a></li>
+                    <li><a href="index.html#case-studies">Case studies</a></li>
                     <li><a href="index.html#contact">Contact</a></li>
                 </ul>
             </div>
@@ -25,20 +25,20 @@
         <div class="container">
             <h1>Content design & UI writing</h1>
             
-            <p class="intro-text">Content design shapes how users experience and understand products through microcopy, UI patterns, and interaction flows. I establish scalable UI content standards, build real-time content design capacity across organizations, and apply content design principles to reduce cognitive load in complex workflows.</p>
+            <p class="intro-text">Content design shapes how users experience and understand products through microcopy, UI patterns, and interaction flows. I establish UI content standards, build real-time content design capacity across organizations, and apply content design principles to reduce cognitive load in complex workflows.</p>
 
             <article class="case-study-detail">
                 <h3>Establishing content design standards (McAfee)</h3>
-                <p>I created comprehensive UI text guidelines for McAfee's security products covering voice and tone principles, button label patterns, error message frameworks, and microcopy standards. The style guide established consistent UI language across the product suite and became the reference for Product, Design, and Engineering teams implementing new features.</p>
+                <p>McAfee lacked UI content standards, resulting in inconsistent interface language across products. I self-directed a comprehensive study of GUI style guides, synthesized industry best practices with established McAfee style, and pioneered the company's first UI text guidelines covering voice and tone, component usage guidelines, and localization best practices. The guide became the authoritative reference adopted across the organization.</p>
 
                 <div class="screenshots-side-by-side">
                     <div class="screenshot-half">
                         <img src="screenshots/content-design_UItextSGtoc.jpg" alt="UI text style guide table of contents" />
-                        <p class="caption">Comprehensive UI text style guide table of contents.</p>
+                        <p class="caption">UI text style guide table of contents.</p>
                     </div>
                     <div class="screenshot-half">
                         <img src="screenshots/content-design_UItextSGbuttons.jpg" alt="Button label guidelines" />
-                        <p class="caption">Detailed button label guidelines with examples.</p>
+                        <p class="caption">UI text style guide button label guidelines.</p>
                     </div>
                 </div>
             </article>
@@ -48,31 +48,31 @@
                 <p>Recognizing the need for real-time content design guidance in an Engineering-driving environment, I founded an #ask-word-nerds Slack channel where implementation teams could request guidance on UI text, error messages, and microcopy on demand. The channel became the authoritative resource for content design questions, preventing inconsistent implementations and building content design awareness across the organization. The channel handled complex decisions like error message clarity, tooltip strategy, and form validation messaging.</p>
 
                 <div class="screenshot-single">
-                    <img src="screenshots/content-design_slack.png" alt="Slack collaboration on error messages" style="max-width: 600px;" />
+                    <img src="screenshots/content-design_slack.png" alt="Slack collaboration on error messages" style="max-width: 750px;" />
                     <p class="caption">Real-time content design collaboration addressing error message clarity and user experience concerns.</p>
                 </div>
             </article>
 
             <article class="case-study-detail">
                 <h3>Applying content design principles to complex workflows (Instabase)</h3>
-                <p>As the authoritative voice for the enterprise automation product, I designed clear, user-centered UI text for complex AI document processing workflows, including getting started guidance, project setup flows, accuracy testing interfaces, and key management. I applied content design principles and best practices to reduce cognitive load and guide users through technical tasks requiring multiple steps and configuration decisions.</p>
+                <p>As the authoritative voice for the enterprise automation product, I owned all related UI content. I designed clear interface text for complex AI document processing workflows—from empty states to field names to help text to error messages—applying content design principles to reduce cognitive load and guide users through multi-step technical tasks.</p>
 
                 <div class="screenshots-grid">
                     <div class="screenshot-quarter">
                         <img src="screenshots/content-design_getting-started.jpg" alt="Getting started guidance" />
-                        <p class="caption">Getting started guidance.</p>
+                        <p class="caption">Empty state with getting started guidance. I recommended numbered steps to indicate order of operations, and advised disabling the <b>Autogenerate schema</b> button until files are added.</p>
                     </div>
                     <div class="screenshot-quarter">
                         <img src="screenshots/content-design_projectUI.jpg" alt="Project setup flow" />
-                        <p class="caption">Project setup flow.</p>
+                        <p class="caption">Main project editing interface. I wrote all text, from labels to options to descriptions.</p>
                     </div>
                     <div class="screenshot-quarter">
                         <img src="screenshots/content-design_keys.jpg" alt="API key management" />
-                        <p class="caption">API key management.</p>
+                        <p class="caption">Runtime configuration interface, demonstrating clear instructional guidance for a complex feature.</p>
                     </div>
                     <div class="screenshot-quarter">
                         <img src="screenshots/content-design_accuracy-tests.jpg" alt="Accuracy testing interface" />
-                        <p class="caption">Accuracy testing interface.</p>
+                        <p class="caption">Accuracy testing interface. I wrote all text and recommended hover text to define key terms.</p>
                     </div>
                 </div>
             </article>
@@ -80,7 +80,7 @@
             <h2>Business impact</h2>
             <ul class="impact-list">
                 <li>Established authoritative content design resources adopted organization-wide.</li>
-                <li>Created reusable UI text patterns scaled across product teams.</li>
+                <li>Created reusable UI text patterns adapted across product teams.</li>
                 <li>Scaled content design expertise across Engineering, Product, and Design without adding headcount.</li>
                 <li>Prevented inconsistent UI language through proactive collaboration.</li>
                 <li>Applied content design principles to reduce cognitive load across technically complex workflows.</li>
