--- a/docs-leadership.html
+++ b/docs-leadership.html
@@ -13,8 +13,8 @@
                 <h1 class="logo"><a href="index.html" style="color: inherit; text-decoration: none;">Melissa Amos</a></h1>
                 <ul class="nav-links">
                     <li><a href="index.html#about">About</a></li>
-                    <li><a href="index.html#case-studies">Case studies</a></li>
                     <li><a href="index.html#samples">Documentation</a></li>
+                    <li><a href="index.html#case-studies">Case studies</a></li>
                     <li><a href="index.html#contact">Contact</a></li>
                 </ul>
             </div>
@@ -25,47 +25,49 @@
         <div class="container">
             <h1>Documentation leadership</h1>
             
-            <p class="intro-text">Documentation leadership transforms reactive content production into strategic organizational capability. I establish systematic release operations, lead strategic content initiatives through structured evaluation, and own critical documentation programs that ensure comprehensive coverage while developing team capacity.</p>
+            <p class="intro-text">Documentation leadership transforms reactive content production into strategic organizational capability. I establish release operations, lead strategic content initiatives through structured evaluation, and own critical documentation programs that ensure comprehensive coverage while developing team capacity.</p>
 
             <article class="case-study-detail">
                 <h3>Leading critical documentation programs (Puppet)</h3>
-                <p>As the lead writer for Puppet Enterprise, the company's flagship commercial product, I owned end-to-end documentation, ensuring comprehensive feature coverage, coordinating release and publishing activities, and mentoring and editing junior writers. I also embedded with the installer engineering team and personally authored the most mission-critical documentation sections including installation, upgrading, system requirements, and disaster recovery. My work built documentation capacity while maintaining quality standards for the most business-critical product line.</p>
+                <p>As the lead writer for Puppet Enterprise, the company's flagship commercial product, I owned end-to-end documentation, ensuring comprehensive feature coverage, coordinating release and publishing activities, and mentoring and editing junior writers. I also embedded with the Installer engineering team and personally authored critical documentation sections including installation, upgrading, system requirements, and disaster recovery. My work built documentation capacity while maintaining quality standards.</p>
+
+                <p class="download-link">📥 <strong>Download: <a href="downloads/PE 2021.2.pdf" target="_blank">Puppet Enterprise 2021.2</a></strong> — Puppet Enterprise documentation, which I led and co-authored.</p>
             </article>
 
             <article class="case-study-detail">
                 <h3>Establishing systematic release operations (Puppet)</h3>
-                <p>Without systematic release notes processes, product releases had inconsistent documentation quality and ad-hoc bug tracking that created confusion about issue status. I established comprehensive release notes standards defining content requirements, quality guidelines, and production workflows. I designed a label-based tracking scheme in Jira that enabled bugs to flow accurately from known issues to resolved issues through the release lifecycle. This systematic approach reduced release notes production time while improving content quality and stakeholder satisfaction. I've since implemented these same frameworks at AppOmni and Instabase, demonstrating their portability across organizations and product types.</p>
+                <p>Without release notes processes, product releases had inconsistent documentation quality and ad-hoc bug tracking that created confusion about issue status. I established comprehensive release notes standards defining content requirements, quality guidelines, and production workflows. I designed a label-based tracking scheme in Jira that enabled bugs to flow accurately from known issues to resolved issues through the release lifecycle. This approach reduced release notes production time while improving content quality and stakeholder satisfaction. I've since implemented these same frameworks at AppOmni and Instabase, demonstrating process portability across organizations and product types.</p>
 
                 <div class="screenshot-single">
                     <img src="screenshots/doc-leadership_releasenotes.jpg" alt="Release notes guidelines" style="max-width: 600px;" />
-                    <p class="caption">Systematic release notes guidelines establishing consistent format and quality standards.</p>
+                    <p class="caption">Release notes guidelines establishing format and quality standards.</p>
                 </div>
             </article>
 
             <article class="case-study-detail">
                 <h3>Leading strategic content initiatives (AppOmni)</h3>
-                <p>Without a structured process for major content decisions, competing priorities and stakeholder concerns were evaluated inconsistently, making it difficult to align cross-functional teams. I created a Request for Comments (RFC) process that enabled systematic evaluation of content challenges, potential solutions, audience needs, technical constraints, and implementation tradeoffs, with clear recommendations and supporting rationale. This systematic analysis often led to detailed tactical guidance, such as a comprehensive style guides covering security insights documentation.</p>
+                <p>Without a structured process for major content decisions, competing priorities and stakeholder concerns were evaluated inconsistently, making it difficult to align cross-functional teams. I created a Request for Comments (RFC) process that enabled systematic evaluation of content challenges, potential solutions, audience needs, technical constraints, and implementation tradeoffs, with clear recommendations and supporting rationale. This process often led to detailed tactical guidance, such as a comprehensive style guides covering security Insights documentation.</p>
 
                 <div class="screenshot-single">
                     <img src="screenshots/doc-leadership_InsightsRFCcover.jpg" alt="Insight remediation guidance RFC" style="max-width: 500px;" />
-                    <p class="caption">RFC establishing strategic framework for major documentation initiative including stakeholder analysis and tradeoff evaluation.</p>
+                    <p class="caption">Example RFC analyzing content approach for a key product feature: Insights.</p>
                 </div>
 
                 <div class="screenshots-side-by-side">
                     <div class="screenshot-half">
                         <img src="screenshots/doc-leadership_InsightsSGtoc.jpg" alt="Insights style guide table of contents" />
-                        <p class="caption">Comprehensive style guide table of contents.</p>
+                        <p class="caption">Insights style guide table of contents.</p>
                     </div>
                     <div class="screenshot-half">
                         <img src="screenshots/doc-leadership_InsightsSGmessage.jpg" alt="Message tone guidelines" />
-                        <p class="caption">Detailed voice and tone guidelines with examples.</p>
+                        <p class="caption">Insights style guide voice and tone guidelines.</p>
                     </div>
                 </div>
             </article>
 
             <h2>Business impact</h2>
             <ul class="impact-list">
-                <li>Built team infrastructure supporting organizational scaling beyond single-writer capacity.</li>
+                <li>Built team infrastructure, supporting organizational scaling beyond single-writer capacity.</li>
                 <li>Achieved 100% documentation feature coverage across rapid product development.</li>
                 <li>Reduced release documentation production time while improving quality and consistency.</li>
                 <li>Created standards adopted by Product, Engineering, and cross-functional teams.</li>
