--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container">
             <h1>Melissa Amos</h1>
             <p class="tagline">Designing content that drives product clarity at scale.</p>
-            <p class="intro">15+ years crafting technical and product content that reduces complexity and support burden while streamlining development cycles. I write award-winning technical documentation, architect documentation systems, establish content standards and terminology frameworks, and build content operations from the ground up.</p>
+            <p class="intro">15+ years crafting technical and product content that reduces complexity and support burden while streamlining development cycles. I write award-winning technical documentation, design intuitive interface content, establish content standards and terminology frameworks, and build content operations from the ground up.</p>
         </div>
     </section>
 
@@ -34,11 +34,11 @@
             <h2>About</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>I operate at the intersection of technical precision and user advocacy, translating complex concepts into clear documentation, standardized nomenclature, and intuitive interface content.</p>
+                    <p>I operate at the intersection of technical precision and user advocacy, translating complex concepts into clear documentation, standardized nomenclature, and effective interface content.</p>
                     
-                    <p>My approach combines deep technical understanding with strategic thinking about information architecture, user experience, and cross-functional collaboration. I solve systemic content challenges—bridging siloed content across product lines, architecting documentation systems that eliminate technical debt, establishing terminology frameworks that prevent costly development delays.</p>
+                    <p>My approach combines deep technical understanding with strategic thinking about information architecture, user experience, and cross-functional collaboration. I solve challenging content problems—bridging siloed content across product lines, architecting documentation that eliminates technical debt, and establishing terminology frameworks that prevent costly development delays.</p>
                     
-                    <p>My work becomes organizational infrastructure: the frameworks teams rely on, the standards that enable independent decision-making, and the governance channels that align cross-functional collaboration.</p>
+                    <p>My work becomes organizational infrastructure that enables teams to scale and users to succeed.</p>
 
                     <h3>Core expertise</h3>
                     <div class="expertise-skills-grid">
@@ -47,19 +47,18 @@
                             <ul>
                                 <li>Building and scaling documentation programs</li>
                                 <li>AI-assisted documentation workflows</li>
-                                <li>Docs-as-code, Markdown/Git/GitHub</li>
+                                <li>Docs-as-code, Markdown, Git/GitHub</li>
                                 <li>DITA/XML and structured authoring</li>
                                 <li>Style automation and content governance</li>
-                                <li>Mentorship and organizational capacity building</li>
+                                <li>Mentorship and team development</li>
                             </ul>
                         </div>
                         <div class="expertise-skill-group">
                             <h4>Information architecture & content strategy</h4>
                             <ul>
-                                <li>Architecting content systems that scale across contexts</li>
+                                <li>Architecting content that adapts across contexts</li>
                                 <li>Content reuse frameworks and repository design</li>
                                 <li>Solving complex IA challenges through systematic analysis</li>
-                                <li>Bridging DITA/XML with docs-as-code workflows</li>
                                 <li>Content governance and workflow management</li>
                                 <li>Strategic recommendations backed by research and cost-benefit analysis</li>
                             </ul>
@@ -100,7 +99,7 @@
             <div class="samples-grid">
                 <div class="sample">
                     <h3>Instabase AI Hub</h3>
-                    <p class="sample-description">I was responsible for this entire automation segment of the docs, as well as the overall architecture of the docs site.</p>
+                    <p class="sample-description">I was responsible for all automation docs, as well as the overall architecture of the docs site.</p>
                     <ul class="sample-links">
                         <li><a href="downloads/Extracting data from documents _ Instabase AI Hub Documentation.pdf" target="_blank">Extracting data from documents</a> — A mix of task, concept, and reference material in a complex, multi-path workflow</li>
                         <li><a href="downloads/Writing custom functions _ Instabase AI Hub Documentation.pdf" target="_blank">Writing custom functions</a> — Demonstrates technical depth documenting developer-focused features</li>
@@ -127,19 +126,19 @@
             <div class="expertise-grid">
                 <article class="expertise-card">
                     <h3>Documentation leadership</h3>
-                    <p>Documentation leadership transforms reactive content production into strategic organizational capability. I establish systematic release operations, lead strategic content initiatives through structured evaluation, and own critical documentation programs that ensure comprehensive coverage while developing team capacity.</p>
+                    <p>Documentation leadership transforms reactive content production into strategic organizational capability. I establish release operations, lead strategic content initiatives through structured evaluation, and own critical documentation programs that ensure comprehensive coverage while developing team capacity.</p>
                     <a href="docs-leadership.html" class="card-link">View documentation leadership case studies →</a>
                 </article>
 
                 <article class="expertise-card">
                     <h3>Information architecture & content strategy</h3>
-                    <p>Effective information architecture transforms unstructured content into scalable systems that support version control, content reuse, and automated publishing. I architect scalable documentation systems, solve content reuse challenges, and enable consistency through comprehensive standards that reduce technical debt and allow documentation to scale with product complexity.</p>
+                    <p>Effective information architecture transforms unstructured content into scalable systems that support version control, content reuse, and automated publishing. I architect scalable documentation systems, solve content reuse challenges, and enable consistency through comprehensive standards.</p>
                     <a href="ia.html" class="card-link">View information architecture case studies →</a>
                 </article>
 
                 <article class="expertise-card">
                     <h3>Content design & UI writing</h3>
-                    <p>Content design shapes how users experience and understand products through microcopy, UI patterns, and interaction flows. I establish scalable UI content standards, build real-time content design capacity across organizations, and apply content design principles to reduce cognitive load in complex workflows.</p>
+                    <p>Content design shapes how users experience and understand products through microcopy, UI patterns, and interaction flows. I establish UI content standards, build real-time content design capacity across organizations, and apply content design principles to reduce cognitive load in complex workflows.</p>
                     <a href="content-design.html" class="card-link">View content design case studies →</a>
                 </article>
 
