--- a/ia.html
+++ b/ia.html
@@ -13,8 +13,8 @@
                 <h1 class="logo"><a href="index.html" style="color: inherit; text-decoration: none;">Melissa Amos</a></h1>
                 <ul class="nav-links">
                     <li><a href="index.html#about">About</a></li>
-                    <li><a href="index.html#case-studies">Case studies</a></li>
                     <li><a href="index.html#samples">Documentation</a></li>
+                    <li><a href="index.html#case-studies">Case studies</a></li>
                     <li><a href="index.html#contact">Contact</a></li>
                 </ul>
             </div>
@@ -25,33 +25,33 @@
         <div class="container">
             <h1>Information architecture & content strategy</h1>
             
-            <p class="intro-text">Effective information architecture transforms unstructured content into scalable systems that support version control, content reuse, and automated publishing. I architect scalable documentation systems, solve content reuse challenges, and enable consistency through comprehensive standards that reduce technical debt and allow documentation to scale with product complexity.</p>
+            <p class="intro-text">Effective information architecture transforms unstructured content into scalable systems that support version control, content reuse, and automated publishing. I architect scalable documentation systems, solve content reuse challenges, and enable consistency through comprehensive standards.</p>
 
             <article class="case-study-detail">
                 <h3>Architecting scalable documentation systems (Puppet)</h3>
-                <p>I led a comprehensive migration from unstructured Markdown to structured DITA authoring for the Puppet Enterprise documentation set. The project involved requirements gathering, vendor assessment, proof of concept, implementation and configuration decisions, team training, and production cutover. As part of the migration, I designed a repository structure that would reduce hierarchy, simplifying usage and enabling scalable content management. The architecture addressed version control, branching strategies, and content organization across multiple product lines and release cycles.</p>
+                <p>I led a comprehensive migration from unstructured Markdown to structured DITA authoring for the Puppet Enterprise documentation set. The project involved requirements gathering, vendor assessment, proof of concept, implementation and configuration decisions, team training, and production cutover. As part of the migration, I designed a repository structure that would reduce hierarchy, simplifying usage and enabling reuse. The architecture addressed version control, branching strategies, and content organization across multiple product lines and release cycles.</p>
 
                 <div class="screenshot-single">
                     <img src="screenshots/IA_flattening.jpg" alt="The Flattening repository architecture proposal" style="max-width: 600px;" />
                     <p class="caption">Repository architecture proposal demonstrating strategic IA thinking and technical depth.</p>
                 </div>
 
-                <p class="download-link">📥 <strong>Download: <a href="downloads/DITA at Puppet.pdf" target="_blank">DITA at Puppet presentation</a></strong> — Complete overview of DITA implementation strategy and repository architecture.</p>
+                <p class="download-link">📥 <strong>Download: <a href="downloads/DITA at Puppet.pdf" target="_blank">DITA at Puppet presentation</a></strong> — Complete overview of DITA migration process.</p>
             </article>
 
             <article class="case-study-detail">
                 <h3>Enabling consistency through comprehensive authoring standards (Puppet)</h3>
-                <p>After migrating to DITA, the documentation team needed comprehensive guidance on how to use the new system effectively. I established an authoring guide defining information types, metadata standards, content reuse patterns, relationship table strategies, and publishing workflows. The guide addressed content organization, file naming conventions, map structures, and quality standards—creating consistency across the documentation team and reducing onboarding time for new writers.</p>
+                <p>After migrating to DITA, the documentation team needed guidance on how to use the new system effectively. I established an authoring guide defining information types, metadata standards, content reuse patterns, relationship table strategies, and publishing workflows. The guide addressed content organization, file naming conventions, map structures, and quality standards, creating consistency across the documentation team and reducing onboarding time for new writers.</p>
 
                 <div class="screenshot-single">
                     <img src="screenshots/IA_DITAauthoring.jpg" alt="DITA authoring guide table of contents" style="max-width: 500px;" />
-                    <p class="caption">Comprehensive authoring guide establishing IA standards and workflows.</p>
+                    <p class="caption">Authoring guide establishing IA standards and workflows.</p>
                 </div>
             </article>
 
             <article class="case-study-detail">
                 <h3>Solving content reuse challenges (Puppet)</h3>
-                <p>As an open-core product, Puppet had two distinct documentation sets for open source and Enterprise, creating a disjointed user experience and duplication and version management challenges. The documentation was in two separate repositories and two different languages: DITA/XML and Markdown. After talking with multiple consultants who didn't have a solution, I pioneered a content sharing system using Git subtrees and DITA Light to share topics between product lines. Our "unified docs" solution eliminated duplicate content maintenance while preserving product-specific customization.</p>
+                <p>As an open-core product, Puppet had two distinct documentation sets for open source and Enterprise, creating a disjointed user experience and duplication and version management challenges. The documentation was in two separate repositories and two different languages: DITA/XML and Markdown. After talking with multiple consultants who didn't have a solution, I pioneered a content sharing system using Git subtrees and DITA Light to share topics between product lines. Our "unified docs" solution eliminated duplicate content while preserving product-specific customization.</p>
 
                 <p class="download-link">📥 <strong>Download: <a href="downloads/Unified docs.pdf" target="_blank">Unified docs technical overview</a></strong> — Technical implementation of cross-product content sharing system.</p>
             </article>
@@ -59,10 +59,10 @@
             <h2>Business impact</h2>
             <ul class="impact-list">
                 <li>Enabled version control and branching for documentation across multiple product lines and release cycles.</li>
-                <li>Built scalable content infrastructure supporting company growth and product complexity.</li>
+                <li>Built scalable content infrastructure, supporting company growth and product complexity.</li>
                 <li>Created consistency across documentation team through comprehensive authoring standards.</li>
-                <li>Reduced onboarding time for new writers with systematic guidance and quality standards.</li>
-                <li>Eliminated duplicate content maintenance between open source and Enterprise product lines.</li>
+                <li>Reduced onboarding time for new writers with systematic guidance.</li>
+                <li>Eliminated duplicate content between open source and Enterprise product lines.</li>
                 <li>Solved previously unsolvable content sharing challenge across two repositories in different authoring languages.</li>
             </ul>
         </div>
