--- a/terminology.html
+++ b/terminology.html
@@ -13,8 +13,8 @@
                 <h1 class="logo"><a href="index.html" style="color: inherit; text-decoration: none;">Melissa Amos</a></h1>
                 <ul class="nav-links">
                     <li><a href="index.html#about">About</a></li>
-                    <li><a href="index.html#case-studies">Case studies</a></li>
                     <li><a href="index.html#samples">Documentation</a></li>
+                    <li><a href="index.html#case-studies">Case studies</a></li>
                     <li><a href="index.html#contact">Contact</a></li>
                 </ul>
             </div>
@@ -29,7 +29,7 @@
 
             <article class="case-study-detail">
                 <h3>Defining product terminology upstream (Instabase)</h3>
-                <p>I developed a comprehensive terminology analysis framework that integrated naming decisions at the PRD phase—before design and implementation—preventing late-stage terminology debates and feature delays. The framework examined dictionary definitions, competitive landscape, industry usage patterns, user mental models, and technical accuracy requirements. When Instabase introduced runtime configuration in AI Hub, this systematic approach resolved the terminology issue early in the product cycle.</p>
+                <p>Without proactive terminology consideration, naming decisions happened late in development, causing delays and user confusion. I developed a comprehensive terminology analysis framework that integrated naming decisions at the PRD phase. This upstream process—before design and implementation—ensured cross-functional alignment, speeding design and development cycles. The framework examined dictionary definitions, competitive landscape, industry usage patterns, user mental models, and technical accuracy requirements. When Instabase introduced runtime configuration in AI Hub, this systematic approach resolved the terminology issue early in the product cycle.</p>
 
                 <div class="screenshot-single">
                     <img src="screenshots/terminology_keys-secrets.png" alt="Keys vs secrets terminology analysis" style="max-width: 400px;" />
@@ -45,17 +45,17 @@
 
                 <div class="screenshot-single">
                     <img src="screenshots/terminology_accuracy.jpg" alt="Accuracy metrics collaboration" style="max-width: 500px;" />
-                    <p class="caption">Cross-functional collaboration with Sales Engineering defining accuracy terminology and validating implementation.</p>
+                    <p class="caption">Cross-functional collaboration with Sales Engineering aligning accuracy metric terminology and definitions.</p>
                 </div>
             </article>
 
             <article class="case-study-detail">
                 <h3>Codifying terminology for internal and external use (Instabase)</h3>
-                <p>After repeatedly defining and operationalizing terminology across product development, I created an authoritative 80+ term glossary covering AI Hub features, document processing concepts, collaboration workflows, and integration vocabulary. The glossary served dual purposes: internal source of truth across Product, Engineering, Design, and Professional Services (reducing inconsistencies and support escalations), and external customer-facing reference ensuring users and Instabase teams used consistent language. As the Head of Professional Services noted, it was "very useful for our team but importantly for our customers as well."</p>
+                <p>After repeatedly defining and operationalizing terminology across product development, I created an authoritative 80+ term glossary covering AI Hub terms. Internally, it became the source of truth, reducing inconsistencies and support escalations. Externally, it ensured users and Instabase teams had consistent language for sales and training interactions. As the Head of Professional Services noted, the glossary was "very useful for our team but importantly for our customers as well."</p>
 
                 <div class="screenshot-single">
                     <img src="screenshots/terminology_glossary.jpg" alt="Product glossary" style="max-width: 800px;" />
-                    <p class="caption">Authoritative product glossary adopted across Product, Engineering, Design, and Professional Services.</p>
+                    <p class="caption">Authoritative product glossary.</p>
                 </div>
             </article>
 
